# viableAi

./: README.md
fe/: .gitignore  README.md  bun.lockb  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
fe/app/: auth.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
fe/app/about/: page.tsx
fe/app/api/: route.ts
fe/app/api/vectorize/: route.ts
fe/app/contact/: page.tsx
fe/app/dashboard/: DashboardClient.tsx  page.tsx
fe/app/dashboard/components/: MarketplaceSection.tsx  PlayersSection.tsx  SettingsSection.tsx  TokenomicsSection.tsx  TransactionTable.tsx  WebhookSection.tsx  chatInstruction.tsx  commingSoon.tsx  createCollectionForm.tsx  createGameForm.tsx  createNftForm.tsx  createTokenModal.tsx  ideaComponent.tsx  mainUniverse.tsx  manageIdeas.tsx  navBarV2.tsx  simpleLoading.tsx  simpleNav.tsx  simpleNavBar.tsx  simpleSideBar.tsx
fe/app/dashboard/login/: page.tsx
fe/app/idea/[id]/: page.tsx
fe/app/pricing/: page.tsx
fe/app/signup/: page.tsx
fe/app/types/: game.ts
fe/app/utils/: AppContext.tsx  db.tsx
fe/components/: Alert.tsx  BigStatement.tsx  Demo.tsx  Features.tsx  Footer.tsx  Hero2.tsx  Landing.tsx  NavBar.tsx  Partner.tsx  Starters.tsx  loading.tsx  login.tsx  simpleSupport.tsx  statements.tsx  whatNew.tsx
server/: .gitignore  Cargo.toml  README.md
server/src/: main.rs
server/src/handler/: challenge.rs  developer.rs  game.rs  mod.rs  nft.rs  player.rs  token.rs
server/src/models/: collection.rs  developer.rs  error.rs  game.rs  mod.rs  nfts.rs  oauth.rs  player.rs  token.rs
server/src/ultilites/: mod.rs
(+22 files in other folders)
