[package]
name = "metaloot-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.1", features = ["typed-header"] }
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
shuttle-axum = { version = "0.51.0", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.51.0"
tokio = "1.28.2"
tracing-subscriber = "0.3.17"
solana-sdk = "2.0.1"
solana-client = "2.0.1"
borsh = "1.5.3"
sha2 = "0.10.8"
reqwest = { version = "0.12.2", features = ["json"] }
thiserror = "2.0.11"
bs58 = "0.5.1"
mpl-token-metadata = "5.1.0"
spl-token = { version = "4.0.1", features = ["no-entrypoint"] }
sqlx = { version = "0.8.3", features = ["time","chrono","postgres","runtime-tokio"] }
spl-associated-token-account = { version = "4.0.0", features = ["no-entrypoint"] }
base64 = "0.22.1"
tower-http = { version = "0.6.2", features = ["cors"] }
urlencoding = "2.1.0"
futures = "0.3.31"
